--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
+    "emailjs": "^2.2.0",
     "express-sanitizer": "^1.0.5",
     "express-session": "^1.15.6",
+    "fs-extra": "^7.0.1",
     "method-override": "^3.0.0"
   }
 }
